# rsdown

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README-en.md  README.md  deploy.sh  hashmap.json  index.html  log.json  package.json  pnpm-lock.yaml
assets/: app.CnXa2qSG.js  en_guide_architecture.md.CLdx4IlI.js  en_index.md.Bv2Rzy2f.js  guide_architecture.md.Bn-GviIm.lean.js  index.md.BIvCdmIf.js  style.D7AWcP-V.css
assets/chunks/: arc.DM6xvTHB.js  blockDiagram-38ab4fdb.CjiUpWxb.js  c4Diagram-3d4e48cf.OaeDomrc.js  channel.3tY0LjSn.js  classDiagram-70f12bd4.eT15A7KI.js  classDiagram-v2-f2320105.W7A5KEVA.js  clone.B1mMemr6.js  createText-2e5e7dd3.BOlobSAN.js  edges-e0da2a9e.1HFlQBPQ.js  erDiagram-9861fffd.BiqdPlgc.js  flowDb-956e92f1.CtapgZqL.js  flowDiagram-66a62f08.B701LciO.js  flowDiagram-v2-96b9c2cf.CPydKGDL.js  flowchart-elk-definition-4a651766.D3woyiOp.js  framework.DuBSyH26.js  ganttDiagram-c361ad54.QB_nPjg5.js  gitGraphDiagram-72cf32ee.CQoneEBs.js  graph.DPyDNoxy.js  index-3862675e.BTpja2KV.js  infoDiagram-f8f76790.CJFQk7hq.js  journeyDiagram-49397b02.CKiV38_I.js  layout.BGypHDpF.js  line.DQf0lm1w.js  linear.BgPjtVE4.js  mindmap-definition-fc14e90a.xwQgzpx9.js  pieDiagram-8a3498a8.ABFEm4w7.js  quadrantDiagram-120e2f19.Cloa9m9m.js  requirementDiagram-deff3bca.BWkEqAc7.js  sankeyDiagram-04a897e0.NXENo20q.js  sequenceDiagram-704730f1.xvr4kVoQ.js  stateDiagram-587899a1.DGBu5puA.js  styles-6aaf32cf.DL5ta2Jp.js  (+8 more)
docs/: index.md  package.json
en/: index.html
guide/: architecture.html
pack/: readme.md
src/: debug.rs  lib.rs
test/: index.test.ts
(+5 files in other folders)
